--- a/market/Info.plist
+++ b/market/Info.plist
@@ -32,8 +32,18 @@
 	<dict>
 		<key>NSExceptionDomains</key>
 		<dict>
-			<key>app-easymarket.com/service/examples</key>
+			<key>app-easymarket.com</key>
 			<dict>
+				<key>NSIncludesSubdomains</key>
+				<true/>
+				<key>NSTemporaryExceptionAllowsInsecureHTTPLoads</key>
+				<true/>
+				<key>NSExceptionAllowsInsecureHTTPLoads</key>
+				<false/>
+				<key>NSTemporaryExceptionMinimumTLSVersion</key>
+				<string>1.0</string>
+				<key>NSTemporaryExceptionRequiresForwardSecrecy</key>
+				<true/>
 				<key>NSThirdPartyExceptionAllowsInsecureHTTPLoads</key>
 				<true/>
 			</dict>
